# cappi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
cappi/: __init__.py  clients.py
