[tool.poetry]
name = "cappi"
version = "0.1.0"
description = "Python library for building clients for APIs"
authors = ["atbuy <filip1253@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
