[tool.poetry]
name = "cappi"
version = "0.2.0"
description = "Python library for building clients for APIs"
authors = ["atbuy <filip1253@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
